feat(tsconfig): define users, shared and extensions custom paths
- ignore .env and create an example

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "noFallthroughCasesInSwitch": false,
     "paths": {
       "@users/*": ["src/users/*"],
-      "@shared/*": ["src/shared/*"]
+      "@shared/*": ["src/shared/*"],
+      "@exceptions/*": ["./src/shared/modules/exceptions/*"]
     }
   }
 }
