--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
 
     "start": "nest start",
+
+    "prestart:dev": "prisma migrate dev",
     "start:dev": "nest start --watch",
+
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
 
