--- a/.docker/Dockerfile.prod
+++ b/.docker/Dockerfile.prod
@@ -9,6 +9,8 @@ RUN npm install
 
 FROM node:16-alpine AS builder
 
+RUN apk add openssl1.1-compat
+
 WORKDIR /app
 
 COPY --from=installer /app/node_modules ./node_modules
@@ -20,6 +22,8 @@ RUN npm run build
 
 FROM node:16-alpine AS runner
 
+RUN apk add openssl1.1-compat
+
 WORKDIR /app
 
 ENV PORT=${PORT}
@@ -27,7 +31,10 @@ ENV GRPC_URL=${GRPC_URL}
 
 ENV RABBITMQ_URL=${RABBITMQ_URL}
 ENV DATABASE_URL=${DATABASE_URL}
-ENV MONGO_URI=${MONGO_URI}
+
+ENV RABBITMQ_MAIL_QUEUE=${RABBITMQ_MAIL_QUEUE}
+ENV RABBITMQ_USER_QUEUE=${RABBITMQ_USER_QUEUE}
+ENV RABBITMQ_AUTH_QUEUE=${RABBITMQ_AUTH_QUEUE}
 
 COPY --from=builder /app/dist ./dist
 COPY --from=builder /app/node_modules ./node_modules
