--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Verify git repository
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Install node on version
         uses: actions/setup-node@v1
@@ -26,12 +28,9 @@ jobs:
 
       - name: Run tests and generate coverage
         run: npm run test:cov
-        # env:
-        #   DATABASE_URL: postgresql://postgres:postgres@localhost:5432/database
 
-      # TODO: Configure new project on SonarCloud before uncommenting this
-      # - name: SonarCloud Scan
-      #   uses: SonarSource/sonarcloud-github-action@master
-      #   env:
-      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: SonarCloud Scan
+        uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
