--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:unit": "jest \".*\\.unit.spec\\.ts\"",
     "test:integration": "jest \".*\\.integration.spec\\.ts\"",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    
+
     "test:cov": "jest --coverage",
     "test:watch": "jest --watch",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
@@ -40,6 +40,7 @@
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
+    "ejs": "^3.1.8",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -51,6 +52,7 @@
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
