feat(docker-compose): add rabbitmq service
- add timeout into queue adapter

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,6 +46,27 @@ services:
     networks:
       - personal-network
 
+  rabbitmq:
+    image: rabbitmq:3.9-management-alpine
+    mem_limit: 256m
+    ports:
+      - ${RABBITMQ_PORT}:5672
+      - ${RABBITMQ_MANAGEMENT_PORT}:15672
+    environment:
+      - AMQP_URL=amqp://rabbitmq?connection_attempts=5&retry_delay=5
+      - RABBITMQ_DEFAULT_USER=${RABBITMQ_USER}
+      - RABBITMQ_DEFAULT_PASS=${RABBITMQ_PASS}
+      - RABBITMQ_ERLANG_COOKIE=SQOKODSQALRPCLNMEQG
+      - RABBITMQ_DEFAULT_VHOST=/
+    healthcheck:
+      test: ['CMD', 'rabbitmq-diagnostics', '-q', 'ping']
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
+    networks:
+      - personal-network
+
 networks:
   personal-network:
     name: personal-network
