--- a/package.json
+++ b/package.json
@@ -9,24 +9,21 @@
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-
     "start": "nest start",
-
     "prestart:dev": "prisma migrate dev",
     "start:dev": "nest start --watch",
-
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-
     "test": "jest",
     "test:unit": "jest \".*\\.unit.spec\\.ts\"",
     "test:integration": "jest \".*\\.integration.spec\\.ts\"",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-
     "test:cov": "jest --coverage",
     "test:watch": "jest --watch",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "release": "standard-version"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.0",
@@ -67,6 +64,7 @@
     "jest-sonar-reporter": "^2.0.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
+    "standard-version": "^9.5.0",
     "supertest": "^6.1.3",
     "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
