--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "release": "standard-version"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.433.0",
     "@grpc/grpc-js": "^1.8.0",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
@@ -36,28 +37,31 @@
     "amqp-connection-manager": "^4.1.9",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
-    "class-validator": "^0.14.0",
-    "ejs": "^3.1.8",
+    "joi": "^17.11.0",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.9",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "aws-sdk-js-codemod": "^0.23.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
