build(npm): install dependencies for JWT token generation
- add new env var into .example, docker-compose and envVariables.ts

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,14 @@ DB_PASSWORD=password
 DB_NAME=database
 DB_PORT=5432
 
+JWT_SECRET=secret
+
+AWS_REGION={{your-region}}
+AWS_ACCESS_KEY_ID={{your-access-key}}
+AWS_SECRET_ACCESS_KEY={{your-secret-key}}
+
+S3_BUCKET={{your-bucket}}
+
 RABBITMQ_PORT=5672
 RABBITMQ_MANAGEMENT_PORT=15672
 RABBITMQ_HOST=localhost
