--- a/package.json
+++ b/package.json
@@ -31,13 +31,18 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^10.1.1",
     "@nestjs/microservices": "^9.2.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
     "amqp-connection-manager": "^4.1.9",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "joi": "^17.11.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "prisma": "^4.7.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -57,6 +62,8 @@
     "@types/jest": "28.1.8",
     "@types/multer": "^1.4.9",
     "@types/node": "^16.0.0",
+    "@types/passport-jwt": "^3.0.11",
+    "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
