feat(aws): create service for SNS
- remove RabbitMQ reference from project
- define events constraints

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "paths": {
       "@users/*": ["src/users/*"],
       "@shared/*": ["src/shared/*"],
+      "@shared/events/*": ["src/shared/domain/event/*"],
       "@exceptions/*": ["./src/shared/modules/exceptions/*"]
     }
   }
