chore: add missing env var to .env example

--- a/.env.example
+++ b/.env.example
@@ -14,4 +14,8 @@ AWS_SECRET_ACCESS_KEY={{your-secret-key}}
 
 S3_BUCKET={{your-bucket}}
 
+SQS_ENDPOINT=http://localhost:4566
+SQS_TOPIC_ARN_MAIL={{your-topic-arn}}
+SQS_GROUP_TOPIC_ARN_MAIL={{your-group-topic-arn}}
+
 DATABASE_URL="postgresql://${DB_USER}:${DB_PASSWORD}@localhost:${DB_PORT}/${DB_NAME}"
