--- a/package.json
+++ b/package.json
@@ -38,8 +38,6 @@
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/client": "^4.7.1",
-    "amqp-connection-manager": "^4.1.9",
-    "amqplib": "^0.10.3",
     "bcrypt": "^5.1.0",
     "joi": "^17.11.0",
     "passport": "^0.6.0",
@@ -57,6 +55,9 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.95",
+    "@swc/jest": "^0.2.29",
     "@types/aws-sdk": "^2.7.0",
     "@types/bcrypt": "^5.0.0",
     "@types/ejs": "^3.1.1",
@@ -80,7 +81,6 @@
     "source-map-support": "^0.5.20",
     "standard-version": "^9.5.0",
     "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
